@@ -148,11 +148,17 @@ public abstract class AbstractDelegatedExecutionApplicationContext extends Abstr
 				super.refresh();
 				sendRefreshedEvent();
 			}
-			catch (RuntimeException ex) {
-				logger.error("Refresh error", ex);
-				sendFailedEvent(ex);
+			catch (Throwable th) {
+				logger.error("Refresh error", th);
+				sendFailedEvent(th);
 				// propagate exception to the caller
-				throw ex;
+				// rethrow the problem w/o rewrapping
+				if (th instanceof RuntimeException) {
+					throw (RuntimeException) th;
+				}
+				else {
+					throw (Error) th;
+				}
 			}
 		}
 		finally {
@@ -236,18 +242,18 @@ public abstract class AbstractDelegatedExecutionApplicationContext extends Abstr
 				}
 			}
 		}
-		catch (RuntimeException ex) {
-			logger.error("Pre refresh error", ex);
+		catch (Throwable th) {
+			logger.error("Pre refresh error", th);
 			// send failure event
-			sendFailedEvent(ex);
-			throw ex;
+			sendFailedEvent(th);
+			// rethrow the problem w/o rewrapping
+			if (th instanceof RuntimeException) {
+				throw (RuntimeException) th;
+			}
+			else {
+				throw (Error) th;
+			}
 		}
-        catch (Error err) {
-            logger.error("Pre refresh error", err);
-            // send failure event
-            sendFailedEvent(err);
-            throw err;
-        }
 		finally {
 			thread.setContextClassLoader(oldTCCL);
 		}
@@ -297,18 +303,18 @@ public abstract class AbstractDelegatedExecutionApplicationContext extends Abstr
 				}
 			}
 		}
-		catch (RuntimeException ex) {
-			logger.error("Post refresh error", ex);
+		catch (Throwable th) {
+			logger.error("Post refresh error", th);
 			// post notification
-			sendFailedEvent(ex);
-			throw ex;
+			sendFailedEvent(th);
+			// rethrow the problem w/o rewrapping
+			if (th instanceof RuntimeException) {
+				throw (RuntimeException) th;
+			}
+			else {
+				throw (Error) th;
+			}
 		}
-        catch (Error err) {
-            logger.error("Post refresh error", err);
-            // post notification
-            sendFailedEvent(err);
-            throw err;
-        }
 		finally {
 			thread.setContextClassLoader(oldTCCL);
 		}
